--- a/espresso-emporium-client/src/index.css
+++ b/espresso-emporium-client/src/index.css
@@ -1,2 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Rancho&display=swap');
+
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui" {
+   themes: light --default;
+}
+
+@plugin "daisyui/theme" {
+   name: "light";
+   default: true;
+   --color-primary: #374151;
+   --color-secondary: #1b1a1ab3;
+   --color-base-200: #F4F3F0;
+   --color-accent: #D2B48C;
+}
+
+body {
+   font-family: "Raleway", sans-serif;
+}
+
+.rancho {
+   font-family: "Rancho", cursive;
+}
+
+.btnHover {
+   @apply hover:bg-[#fff] duration-200
+}
+
+.backgroundImg1 {
+   background-image: url(../src/assets/more/4.png);
+   background-repeat: no-repeat;
+}
+
+.backgroundImg2 {
+   background-image: url(../src/assets/more/5.png);
+   background-repeat: no-repeat;
+   background-position: right bottom;
+}
